pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsSimpler_true_0/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (group = Gryffindor) to (group = Web and group = Gryffindor)
        nsx-id: "9195"
    creationTimestamp: null
    name: policy_0
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (group = Slytherin) to (group = Web and group = Slytherin)
        nsx-id: "9195"
    creationTimestamp: null
    name: policy_1
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (group = Web and group = Gryffindor) to (group = App and group = Gryffindor)
        nsx-id: "9196"
    creationTimestamp: null
    name: policy_2
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__App
                      operator: Exists
                    - key: group__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (group = Web and group = Slytherin) to (group = App and group = Slytherin)
        nsx-id: "9196"
    creationTimestamp: null
    name: policy_3
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__App
                      operator: Exists
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (group = Gryffindor) to (group = Web and group = Gryffindor)
        nsx-id: "9195"
    creationTimestamp: null
    name: policy_4
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (group = Slytherin) to (group = Web and group = Slytherin)
        nsx-id: "9195"
    creationTimestamp: null
    name: policy_5
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (group = Web and group = Gryffindor) to (group = App and group = Gryffindor)
        nsx-id: "9196"
    creationTimestamp: null
    name: policy_6
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (group = Web and group = Slytherin) to (group = App and group = Slytherin)
        nsx-id: "9196"
    creationTimestamp: null
    name: policy_7
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Ingress
